benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-rfi009_power.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi009_power.oepc.yml/rfi009_power.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi009_power.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_h32smdfn/tmp/tmp2w70lg2u.c
Compilation started
/tmp/BenchExec_run_h32smdfn/tmp/tmp2w70lg2u.c: In function ‘P0’:
/tmp/BenchExec_run_h32smdfn/tmp/tmp2w70lg2u.c:583:19: error: ‘FALSE’ undeclared (first use in this function)
  583 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_h32smdfn/tmp/tmp2w70lg2u.c:583:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_h32smdfn/tmp/tmp2w70lg2u.c: In function ‘P1’:
/tmp/BenchExec_run_h32smdfn/tmp/tmp2w70lg2u.c:623:19: error: ‘FALSE’ undeclared (first use in this function)
  623 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_h32smdfn/tmp/tmp2w70lg2u.c: In function ‘main’:
/tmp/BenchExec_run_h32smdfn/tmp/tmp2w70lg2u.c:710:19: error: ‘TRUE’ undeclared (first use in this function)
  710 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
